Adding Router Update
Added Packet to makefile
Added methods as a structure to be filled in.
Packets will be added and removed using enqueuePacket and dequeuePacket
methods. sizeIn - incomingQueue size, sizeOut - outgoingQueue size.

--- a/src/makefile
+++ b/src/makefile
@@ -2,7 +2,7 @@ CC=g++
 CFLAGS=-c -Wall -g
 EFLAGS=
 LDFLAGS= 
-SOURCES= main.cpp Graph.h Graph.cpp GraphIO.h GraphIO.cpp GraphRouter.h GraphRouter.cpp Router.h Router.cpp
+SOURCES= main.cpp Graph.h Graph.cpp GraphIO.h GraphIO.cpp GraphRouter.h GraphRouter.cpp Router.h Router.cpp Packet.h Packet.cpp
 OBJECTS= $(SOURCES:.cpp=.o)
 EXECUTABLE= ../build/NetworkSimulator
 
