Adding functionality (SWITCHING) to GraphRouter
Every time GraphRouter.run method is called it will switch packets that
are inside incoming queues to the next router based on nextPath
provided by Graph class.

--- a/src/makefile
+++ b/src/makefile
@@ -1,5 +1,5 @@
 CC=g++
-CFLAGS=-c -Wall -g
+CFLAGS=-c -Wall 
 EFLAGS=
 LDFLAGS= 
 SOURCES= main.cpp Graph.h Graph.cpp GraphIO.h GraphIO.cpp GraphRouter.h GraphRouter.cpp Router.h Router.cpp Packet.h Packet.cpp
