Added Delay and cleaned up PacketQueue

--- a/src/makefile
+++ b/src/makefile
@@ -2,14 +2,15 @@ CC=g++
 CFLAGS=-c -Wall 
 EFLAGS=
 LDFLAGS= 
-SOURCES= main.cpp Graph.h Graph.cpp GraphIO.h GraphIO.cpp GraphRouter.h GraphRouter.cpp Router.h Router.cpp Packet.h Packet.cpp Queue.cpp 
+SOURCES= main.cpp Graph.h Graph.cpp GraphIO.h GraphIO.cpp GraphRouter.h GraphRouter.cpp Router.h Router.cpp Packet.h Packet.cpp PacketQueue.h PacketQueue.cpp Poisson.h
 OBJECTS= $(SOURCES:.cpp=.o)
 EXECUTABLE= ../build/NetworkSimulator
 
 all: $(SOURCES) $(EXECUTABLE)
 
 clean: 
-	rm build/*
+	rm *.o
+	rm ../build/*
 
 $(EXECUTABLE): $(OBJECTS)
 	$(CC) $(LDFLAGS) $(OBJECTS) -o $@ $(EFLAGS)
